[package]
name = "mort"
version = "0.0.2"
description = "Next-gen deploy tool"
license = "MIT"
repository = "https://github.com/nukomeet/mort"
authors = [
  "Łukasz Niemier <lukasz@niemier.pl>",
  "Nukomeet <bonjour@nukomeet.com>"
]

[features]
default = []
unstable = []

[lib]
name = "mort"
path = "src/lib.rs"

[[bin]]
name = "mort"
path = "src/main.rs"
doc = false

[dependencies]
docopt = "~0.6.64"
ucl = "*"
rustc-serialize = "~0.3.14"
